Update vacancy views

--- a/app/views/vacancies/edit.njk
+++ b/app/views/vacancies/edit.njk
@@ -2,8 +2,8 @@
 
 {% set primaryNavId = "courses" %}
 
-{% set caption = course.name + " (" + course.code + ")" %}
-{% set title = "Vacancies"  %}
+{% set caption = "Vacancies - " + course.name + " (" + course.code + ")" %}
+{% set title = "oh mio dio si"  %}
 
 {% block pageTitle %}
   {{ "Error: " if errors.length }}{{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
@@ -58,28 +58,30 @@
           },
           errorMessage: errors | getErrorMessage("course-vacancies"),
           items: [
-          {
-            id: "de213b97-4126-40dd-90f4-5d4abecf4aa6",
-            value: "no",
-            text: "No vacancies",
-            hint: {
-              text: "Close this course to new applications. You can reopen the course later."
-            },
-            checked: true if course.hasVacancies === 'no' else false
-          }, {
-            id: "84f3e809-b98b-4141-b547-8f701aa65a11",
-            value: "yes",
-            text: "Some vacancies",
-            checked: true if course.hasVacancies === 'yes' else false,
-            conditional: {
-              html: locationOptionsHtml
+            {
+              id: "de213b97-4126-40dd-90f4-5d4abecf4aa6",
+              value: "no",
+              text: "No vacancies",
+              hint: {
+                text: "Close this course to new applications. You can reopen the course later."
+              },
+              checked: true if course.hasVacancies in ['no',false] else false
+            }, {
+              id: "84f3e809-b98b-4141-b547-8f701aa65a11",
+              value: "yes",
+              text: "Some vacancies",
+              checked: true if course.hasVacancies in ['yes',true] else false
             }
-          }
           ]
         }) }}
 
+        {# ,
+        conditional: {
+          html: locationOptionsHtml
+        } #}
+
         {{ govukButton({
-          text: "Update vacancies"
+          text: "Continue"
         }) }}
 
       </form>
@@ -90,6 +92,5 @@
 
     </div>
   </div>
-
 
 {% endblock %}
