--- a/app/views/vacancies/locations.njk
+++ b/app/views/vacancies/locations.njk
@@ -5,6 +5,10 @@
 {% set caption = "Vacancies - " + course.name + " (" + course.code + ")" %}
 {% set title = "Locations"  %}
 
+{% block pageTitle %}
+  {{ "Error: " if errors.length }}{{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
+{% endblock %}
+
 {% block beforeContent %}
 {{ govukBackLink({
   text: "Back",
