Move vacancies within courses section

--- a/app/views/courses/_sub-navigation.njk
+++ b/app/views/courses/_sub-navigation.njk
@@ -8,5 +8,9 @@
     text: "Description",
     href: actions.description,
     active: true if subNavId == "description"
+  }, {
+    text: "Vacancies",
+    href: actions.vacancies,
+    active: true if subNavId == "vacancies"
   }]
 }) }}
