--- a/app/views/courses/vacancies/locations.njk
+++ b/app/views/courses/vacancies/locations.njk
@@ -3,7 +3,7 @@
 {% set primaryNavId = "courses" %}
 
 {% set caption = "Vacancies - " + course.name + " (" + course.code + ")" %}
-{% set title = "Locations"  %}
+{% set title = "Locations with vacancies"  %}
 
 {% block pageTitle %}
   {{ "Error: " if errors.length }}{{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
@@ -34,9 +34,6 @@
             legend: {
               html: headingHtml
             }
-          },
-          hint: {
-            text: "Select all locations with vacancies"
           },
           errorMessage: errors | getErrorMessage("locations-vacancies"),
           items: locationOptions
