Disable publish button

--- a/app/views/courses/_actions.njk
+++ b/app/views/courses/_actions.njk
@@ -7,7 +7,7 @@
   <div class="govuk-button-group">
     {{ govukButton({
       text: "Publish course",
-      href: actions.publish,
+      href: "#",
       classes: "govuk-!-margin-right-2"
     }) }}
 
