--- a/app/views/courses/visa-sponsorship.njk
+++ b/app/views/courses/visa-sponsorship.njk
@@ -54,6 +54,8 @@
         {% endif %}
       {% endif %}
 
+      <p class="govuk-body">Learn more about <a class="govuk-link" href="https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers">recruiting trainee teachers from overseas</a>.</p>
+
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
         {% if fundingType == "fee" %}
@@ -103,6 +105,15 @@
       <p class="govuk-body">
         <a class="govuk-link" href="{{ actions.cancel }}">Cancel</a>
       </p>
+
+      {# {% set visaGuidanceHtml %}
+        <p class="govuk-body">Learn more about <a class="govuk-link" href="https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers">recruiting trainee teachers from overseas</a>.</p>
+      {% endset %}
+
+      {{ govukDetails({
+        summaryText: "Help with visas",
+        html: visaGuidanceHtml
+      }) }} #}
 
     </div>
   </div>
