--- a/app/views/organisations/details.njk
+++ b/app/views/organisations/details.njk
@@ -130,50 +130,52 @@
     </div>
   </div>
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <h2 class="govuk-heading-m govuk-!-margin-top-5">Visa sponsorship</h2>
+  {% if organisation.type in ["hei","scitt"] %}
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        <h2 class="govuk-heading-m govuk-!-margin-top-5">Visa sponsorship</h2>
 
-      {{ govukSummaryList({
-        rows: [
-          {
-            key: {
-              text: "Student visa"
+        {{ govukSummaryList({
+          rows: [
+            {
+              key: {
+                text: "Student visa"
+              },
+              value: {
+                text: organisation.visaSponsorship.canSponsorStudentVisa | getStudentVisaLabel + (" - can sponsor" if organisation.visaSponsorship.canSponsorStudentVisa == "yes" else " - cannot sponsor")
+              },
+              actions: {
+                items: [
+                  {
+                    href: actions.change + "/student-visa",
+                    text: "Change",
+                    visuallyHiddenText: "if candidates get a sponsored Student visa for your fee-paying courses"
+                  }
+                ]
+              } if organisation.type == "hei"
             },
-            value: {
-              text: organisation.visaSponsorship.canSponsorStudentVisa | getStudentVisaLabel + (" - can sponsor" if organisation.visaSponsorship.canSponsorStudentVisa == "yes" else " - cannot sponsor")
-            },
-            actions: {
-              items: [
-                {
-                  href: actions.change + "/student-visa",
-                  text: "Change",
-                  visuallyHiddenText: "if candidates get a sponsored Student visa for your fee-paying courses"
-                }
-              ]
-            } if organisation.type == "hei"
-          },
-          {
-            key: {
-              text: "Skilled Worker visa"
-            },
-            value: {
-              text: organisation.visaSponsorship.canSponsorSkilledWorkerVisa | getSkilledWorkerVisaLabel + (" - can sponsor" if organisation.visaSponsorship.canSponsorSkilledWorkerVisa == "yes" else " - cannot sponsor")
-            },
-            actions: {
-              items: [
-                {
-                  href: actions.change + "/skilled-worker-visa",
-                  text: "Change",
-                  visuallyHiddenText: "if candidates get a sponsored Skilled Worker visa for your salaried courses"
-                }
-              ]
+            {
+              key: {
+                text: "Skilled Worker visa"
+              },
+              value: {
+                text: organisation.visaSponsorship.canSponsorSkilledWorkerVisa | getSkilledWorkerVisaLabel + (" - can sponsor" if organisation.visaSponsorship.canSponsorSkilledWorkerVisa == "yes" else " - cannot sponsor")
+              },
+              actions: {
+                items: [
+                  {
+                    href: actions.change + "/skilled-worker-visa",
+                    text: "Change",
+                    visuallyHiddenText: "if candidates get a sponsored Skilled Worker visa for your salaried courses"
+                  }
+                ]
+              }
             }
-          }
-        ]
-      }) }}
+          ]
+        }) }}
+      </div>
     </div>
-  </div>
+  {% endif %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
