Update primary navigation link

--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -128,7 +128,7 @@
           active: primaryNavId == "users"
         },
         {
-          href: baseUrl + "/partners",
+          href: baseUrl + "/training-partners",
           text: "Training partners",
           active: primaryNavId == "partners"
         } if passport.organisation.type in ["hei","scitt"],
