--- a/app/views/training-partners/courses/details.njk
+++ b/app/views/training-partners/courses/details.njk
@@ -1,6 +1,6 @@
 {% extends "_layout.njk" %}
 
-{% set primaryNavId = "partners" %}
+{% set primaryNavId = "trainingPartners" %}
 
 {% set title = course.name + " (" + course.code + ")" %}
 {% set caption = partner.name %}
