--- a/app/views/training-partners/list.njk
+++ b/app/views/training-partners/list.njk
@@ -1,6 +1,6 @@
 {% extends "_layout.njk" %}
 
-{% set primaryNavId = "partners" %}
+{% set primaryNavId = "trainingPartners" %}
 
 {% set title = "Training partners" %}
 
