Update primaryNavId to 'trainingPartners'

--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -130,7 +130,7 @@
         {
           href: baseUrl + "/training-partners",
           text: "Training partners",
-          active: primaryNavId == "partners"
+          active: primaryNavId == "trainingPartners"
         } if passport.organisation.type in ["hei","scitt"],
         {
           href: baseUrl + "/accredited-bodies",
