--- a/app/views/courses/_meta-data.njk
+++ b/app/views/courses/_meta-data.njk
@@ -1,4 +1,4 @@
-{% if course.status == 1 %}
+{% if course.status in [1,4] %}
   <p class="govuk-hint govuk-!-font-size-16">Last updated on {{ course.updatedAt | govukShortDateAtTime }}</p>
 {% elif course.status == 3 %}
   <p class="govuk-hint govuk-!-font-size-16">Withdrawn on {{ course.updatedAt | govukShortDateAtTime }}</p>
