--- a/app/views/courses/list.njk
+++ b/app/views/courses/list.njk
@@ -99,6 +99,12 @@
             <tbody class="govuk-table__body">
 
               {% for course in provider.courses %}
+                {% if course.applicationsOpenDate == "other" %}
+                  {% set openDate = course.applicationsOpenDateOther %}
+                {% else %}
+                  {% set openDate = course.applicationsOpenDate %}
+                {% endif %}
+
                 <tr class="govuk-table__row">
                   <td class="govuk-table__cell app-table--courses__course-name">
                     <a class="govuk-link govuk-heading-s govuk-!-margin-bottom-0" href="{{ actions.view }}/{{ course.id }}">
@@ -113,8 +119,8 @@
                   </td>
                   <td class="govuk-table__cell">
                     {{ govukTag({
-                      text: course.status | getCourseStatusLabel,
-                      classes: course.status | getCourseStatusClasses
+                      text: course.status | getCourseStatusLabel(openDate),
+                      classes: course.status | getCourseStatusClasses(openDate)
                     }) }}
                   </td>
                   <td class="govuk-table__cell">
