--- a/app/views/courses/applications-open-date.njk
+++ b/app/views/courses/applications-open-date.njk
@@ -82,9 +82,9 @@
           errorMessage: errors | getErrorMessage("application-open-date"),
           items: [
             {
-              value: data.currentCycle.applyOpens,
+              value: applicationsOpenDate | date,
               text: "As soon as the course is on Find (recommended)",
-              checked: true if (course.applicationsOpenDate | date) == (data.currentCycle.applyOpens | date)
+              checked: true if (course.applicationsOpenDate | date) == (applicationsOpenDate | date)
             },
             {
               value: "other",
