Update age range page title

--- a/app/views/courses/age-range.njk
+++ b/app/views/courses/age-range.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "courses" %}
 
-{% set title = "Specify an age range" %}
+{% set title = "Age range" %}
 
 {% if course.id %}
   {% set caption = course.name + " (" + course.code + ")" %}
