--- a/app/views/courses/subject.njk
+++ b/app/views/courses/subject.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "courses" %}
 
-{% set title = "Pick a " + (course.subjectLevel | lower) + " subject" %}
+{% set title = "Subject" %}
 
 {% if course.id %}
   {% set caption = course.name + " (" + course.code + ")" %}
