Update subject level label

--- a/app/views/courses/subject-level.njk
+++ b/app/views/courses/subject-level.njk
@@ -37,7 +37,7 @@
           name: "course[subjectLevel]",
           fieldset: {
             legend: {
-              text: "Level",
+              text: "Subject level",
               classes: "govuk-fieldset__legend--m"
             }
           },
