Update qualifications (outcome) page title

--- a/app/views/courses/qualification.njk
+++ b/app/views/courses/qualification.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "courses" %}
 
-{% set title = "Pick a course outcome" %}
+{% set title = "Qualification" %}
 
 {% if course.id %}
   {% set caption = course.name + " (" + course.code + ")" %}
