Update funding type page title

--- a/app/views/courses/funding-type.njk
+++ b/app/views/courses/funding-type.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "courses" %}
 
-{% set title = "Is it fee paying or salaried?" %}
+{% set title = "Funding type" %}
 
 {% if course.id %}
   {% set caption = course.name + " (" + course.code + ")" %}
