Update course start date summary list label

--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -278,7 +278,7 @@
             },
             {
               key: {
-                text: "Course start"
+                text: "Course start date"
               },
               value: {
                 html: courseStartHtml
