Update training partner course list

--- a/app/views/training-partners/courses/list.njk
+++ b/app/views/training-partners/courses/list.njk
@@ -77,8 +77,10 @@
                 <td class="govuk-table__cell">
                   {% if course.status == 1 %}
                     Open
-                  {% elif course.status == 3 %}
+                  {% elif course.status in [3,4] %}
                     Closed
+                  {% else %}
+                    -
                   {% endif %}
                 </td>
                 <td class="govuk-table__cell">
@@ -90,6 +92,14 @@
                     {% endif %}
                   {% elif course.status == 3 %}
                     No
+                  {% elif course.status == 4 %}
+                    {% if permissions and "change_course_vacancies" in permissions %}
+                      No (<a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> vacancies for {{ course.name }} ({{ course.code }})</span></a>)
+                    {% else %}
+                      No
+                    {% endif %}
+                  {% else %}
+                    -
                   {% endif %}
                 </td>
               </tr>
