--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -261,7 +261,7 @@
             } if course.fundingType in ["salary","apprenticeship"],
             {
               key: {
-                text: "Applications open date"
+                text: "Course open date"
               },
               value: {
                 text: "As soon as the course is on Find" if course.applicationsOpenDate != "other" else course.applicationsOpenDateOther | date("d MMMM yyyy")
