--- a/app/views/_components/all.scss
+++ b/app/views/_components/all.scss
@@ -1,4 +1,5 @@
 @import "action-bar/action-bar";
+@import "advice/advice";
 @import "autocomplete/autocomplete";
 @import "badge/badge";
 @import "banner/banner";
