--- a/app/views/courses/_actions.njk
+++ b/app/views/courses/_actions.njk
@@ -19,7 +19,7 @@
       }) }}
     {% endif %}
 
-    <a class="govuk-link govuk-!-margin-right-2" href="#">Preview course</a>
+    <a class="govuk-link govuk-!-margin-right-2" href="{{ actions.preview }}">Preview course</a>
     <a class="govuk-link app-link--destructive" href="{{ actions.delete }}">Delete course</a>
   </div>
 {% endif %}
