--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -40,7 +40,7 @@ $git-brand-colour: #159964;
 // @import "components/advice";
 // @import "components/application-card";
 // @import "components/copy-content";
-// @import "components/description-list";
+@import "components/description-list";
 @import "components/inset-text";
 // @import "components/link";
 @import "components/list";
