--- a/app/views/courses/preview/sections/fees-and-financial-support.njk
+++ b/app/views/courses/preview/sections/fees-and-financial-support.njk
@@ -35,6 +35,13 @@
       {% if course.feeDetails %}
         {{ course.feeDetails | markdownToHtml | safe }}
       {% endif %}
+
+    {% else %}
+
+      {{ govukInsetText({
+        html: '<a class="govuk-link" href="#">Enter details about fees and financial support</a>'
+      }) }}
+
     {% endif %}
 
   {% endif %}
