--- a/app/views/organisations/skilled-worker-visa.njk
+++ b/app/views/organisations/skilled-worker-visa.njk
@@ -2,7 +2,8 @@
 
 {% set primaryNavId = "settings" %}
 
-{% set title = "Skilled Worker visa" %}
+{% set title = "Skilled Worker visas" %}
+{% set caption = "Visa sponsorship" %}
 
 {% block pageTitle %}
   {{ "Error: " if errors.length }}{{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
@@ -24,7 +25,7 @@
 
       {% include "_includes/page-heading.njk" %}
 
-      {% if query.show and query.show == "help" %}
+      {# {% if query.show and query.show == "help" %}
 
         <p class="govuk-body">
           Non-UK teacher training candidates need the correct visa or immigration status to work or study in England.
@@ -38,7 +39,7 @@
           <a class="govuk-link" href="https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers#recruit-by-becoming-a-visa-sponsor">Learn more about visa sponsorship</a>
         </p>
 
-      {% endif %}
+      {% endif %} #}
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
@@ -47,7 +48,7 @@
           name: "organisation[visaSponsorship][canSponsorSkilledWorkerVisa]",
           fieldset: {
             legend: {
-              text: "Can candidates get a sponsored Skilled Worker visa for your salaried courses?",
+              text: "Can your organisation sponsor Skilled Worker visas for courses you run?",
               classes: "govuk-fieldset__legend--m"
             }
           },
@@ -55,8 +56,12 @@
           items: skilledWorkerVisaOptions
         }) }}
 
+        {{ govukInsetText({
+          text: "Changing your answer will not change visa information for courses you have already created."
+        }) }}
+
         {{ govukButton({
-          text: "Update Skilled Worker visa"
+          text: "Update " + title
         }) }}
 
       </form>
