Update visa summary list labels

--- a/app/views/organisations/details.njk
+++ b/app/views/organisations/details.njk
@@ -139,7 +139,7 @@
           rows: [
             {
               key: {
-                text: "Student visa"
+                text: "Student visas"
               },
               value: {
                 text: organisation.visaSponsorship.canSponsorStudentVisa | getStudentVisaLabel + (" - can sponsor" if organisation.visaSponsorship.canSponsorStudentVisa == "yes" else " - cannot sponsor")
@@ -156,7 +156,7 @@
             },
             {
               key: {
-                text: "Skilled Worker visa"
+                text: "Skilled Worker visas"
               },
               value: {
                 text: organisation.visaSponsorship.canSponsorSkilledWorkerVisa | getSkilledWorkerVisaLabel + (" - can sponsor" if organisation.visaSponsorship.canSponsorSkilledWorkerVisa == "yes" else " - cannot sponsor")
