Change section title if course is salaried

--- a/app/views/courses/description.njk
+++ b/app/views/courses/description.njk
@@ -111,7 +111,7 @@
     <div class="govuk-grid-column-full">
 
       <h2 class="govuk-heading-m">
-        Course length and fees
+        Course length and {{ "salary details" if course.fundingType == "salary" else "fees" }}
       </h2>
 
       {% set courseLengthText %}
