Only show salary line if salaried

--- a/app/views/courses/description.njk
+++ b/app/views/courses/description.njk
@@ -252,7 +252,7 @@
                 }
               ]
             } if course.status != 3
-          }
+          } if course.fundingType == "salary"
         ]
       }) }}
 
