--- a/app/views/courses/salary-details.njk
+++ b/app/views/courses/salary-details.njk
@@ -23,35 +23,29 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      {% set headingHtml %}
-        {% include "_includes/page-heading.njk" %}
-      {% endset %}
+      {% include "_includes/page-heading.njk" %}
+
+      <p class="govuk-body">Give details about the salary for this course.</p>
+      <p class="govuk-body">You should:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          give an indication of the salary – if you don’t have the figure, say how it will be calculated (eg using the unqualified teachers’ pay scales)
+        </li>
+        <li>
+          say whether there are any fees or others costs – if there are no fees for this course, you should also say so
+        </li>
+      </ul>
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
-
-        {% set hintTextHtml %}
-        <p class="govuk-body">Give details about the salary for this course.</p>
-        <p class="govuk-body">You should:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>
-            give an indication of the salary – if you don’t have the figure, say how it will be calculated (eg using the unqualified teachers’ pay scales)
-          </li>
-          <li>
-            say whether there are any fees or others costs – if there are no fees for this course, you should also say so
-          </li>
-        </ul>
-        {% endset %}
 
         {{ govukCharacterCount({
           id: "salary details",
           name: "course[salaryDetails]",
           rows: 10,
-          maxwords: 250,
+          maxwords: wordCount,
           label: {
-            html: headingHtml
-          },
-          hint: {
-            html: hintTextHtml
+            text: title,
+            classes: "govuk-label--s"
           },
           errorMessage: errors | getErrorMessage("salary details"),
           value: course.salaryDetails
