Add hint text 'select all locations with vacancies'

--- a/app/views/courses/vacancies/locations.njk
+++ b/app/views/courses/vacancies/locations.njk
@@ -35,6 +35,9 @@
               html: headingHtml
             }
           },
+          hint: {
+            text: "Select all locations with vacancies"
+          },
           errorMessage: errors | getErrorMessage("locations-vacancies"),
           items: locationOptions
         }) }}
