Disable the apply button when previewing a course

--- a/app/views/courses/preview/sections/apply.njk
+++ b/app/views/courses/preview/sections/apply.njk
@@ -4,8 +4,8 @@
     {% if course.hasVacancies %}
       {{ govukButton({
         text: "Apply for this course",
-        href: "#",
-        isStartButton: true
+        isStartButton: true,
+        disabled: true
       }) }}
     {% else %}
       {{ govukWarningText({
