--- a/app/views/courses/apprenticeship.njk
+++ b/app/views/courses/apprenticeship.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "courses" %}
 
-{% set title = "Is this a teaching apprenticeship?" %}
+{% set title = "Teaching apprenticeship" %}
 
 {% if course.id %}
   {% set caption = course.name + " (" + course.code + ")" %}
@@ -28,9 +28,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      {% set headingHtml %}
-        {% include "_includes/page-heading.njk" %}
-      {% endset %}
+      {% include "_includes/page-heading.njk" %}
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
@@ -39,7 +37,8 @@
           name: "course[fundingType]",
           fieldset: {
             legend: {
-              html: headingHtml
+              text: "Is this a teaching apprenticeship?",
+              classes: "govuk-fieldset__legend--m"
             }
           },
           errorMessage: errors | getErrorMessage("funding-type"),
@@ -48,7 +47,7 @@
 
         {% if course.id %}
           {{ govukButton({
-            text: "Update apprenticeship"
+            text: "Update " + (title | lower)
           }) }}
         {% else %}
           {{ govukButton({
