Update button text to use page title

--- a/app/views/courses/accredited-body.njk
+++ b/app/views/courses/accredited-body.njk
@@ -48,7 +48,7 @@
 
         {% if course.id %}
           {{ govukButton({
-            text: "Update accredited body"
+            text: "Update " + (title | lower)
           }) }}
         {% else %}
           {{ govukButton({
