--- a/app/views/courses/age-range.njk
+++ b/app/views/courses/age-range.njk
@@ -98,7 +98,7 @@
 
         {% if course.id %}
           {{ govukButton({
-            text: "Update age range"
+            text: "Update " + (title | lower)
           }) }}
         {% else %}
           {{ govukButton({
