--- a/app/views/courses/qualification.njk
+++ b/app/views/courses/qualification.njk
@@ -48,7 +48,7 @@
 
         {% if course.id %}
           {{ govukButton({
-            text: "Update qualification"
+            text: "Update " + (title | lower)
           }) }}
         {% else %}
           {{ govukButton({
